# autonomous-frodobot

./: CMakeLists.txt  README.md
install/: local_setup.sh  setup.sh
install/frodobot_lidar/share/frodobot_lidar/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/frodobot_lidar/share/frodobot_lidar/cmake/: frodobot_lidarConfig.cmake
lidar/: LidarScanner.hpp  ScanPoint.hpp
log/: latest_build
src/frodobot_base/: CMakeLists.txt
src/frodobot_lidar/: package.xml
src/frodobot_lidar/core/: Result.hpp
src/frodobot_lidar/examples/: lidar_console_demo.cpp
src/frodobot_lidar/lidar/: LidarScanner.cpp  LidarScanner.hpp
src/frodobot_lidar/src/: lidar_node.cpp
